fix: show preview controls on Safari

--- a/app/header.module.css
+++ b/app/header.module.css
@@ -1,8 +1,7 @@
 .header {
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   top: 0;
-  right: 0;
-  left: 0;
   width: 100%;
   padding: 1rem;
   z-index: 100;
